--- a/uimodule/.env3
+++ b/uimodule/.env3
@@ -1,1 +1,2 @@
-destinations=[{"name":"DesarrolloCF","url":"http://DesarrolloCF.dest","proxyHost":"http://127.0.0.1","proxyPort":"8887"}]
+destinations=[{"name":"BACKEND_SAP","url":"http://BACKEND_SAP.dest","proxyHost":"http://127.0.0.1","proxyPort":"8887"}]
+VCAP_SERVICES={}
