--- a/uimodule/ui5.yaml
+++ b/uimodule/ui5.yaml
@@ -25,11 +25,10 @@ server:
       afterMiddleware: compression
       configuration:
         debug: true
-        port: 1092
+        port: 1093
         xsappJson: uimodule/webapp/xs-app.json
-        destinations:
-           - name: "DesarrolloCF"
-              url: "http://d02profer:8001"
+        destinations: []
+
 builder:
   customTasks:
     -  name: ui5-task-zipper
